Html Frontend: fix some layout issues
action / navigation in compact mode

--- a/src/main/webapp/mj.css
+++ b/src/main/webapp/mj.css
@@ -196,10 +196,6 @@ table.table tr td {
 	overflow: auto;
 }
 
-.actionMenu {
-	height: 1em;
-}
-
 ul.actionMenu {
 	margin: 0em;
 	padding-right: 2ex;
